ingestors/kubernetes/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: metlo-daemonset-pod
spec:
  selector:
    matchLabels:
      name: metlo-app
  template:
    metadata:
      labels:
        name: metlo-app
    spec:
      containers:
        - name: suricata-daemon
          image: metlo/suricata-daemon
          imagePullPolicy: Never
          securityContext:
            privileged: true
      nodeSelector:
        <SOME APP SELECTOR>
