ingestors/kubernetes/metlo-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: metlo-app
spec:
  selector:
    matchLabels:
      name: metlo-app
  template:
    metadata:
      labels:
        name: metlo-app
    spec:
      hostNetwork: true
      tolerations:
        # this toleration is to have the daemonset runnable on master nodes
        # remove it if your masters can't run pods
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
        - name: metlo-agent
          image: metlo/agent
          resources:
            requests:
              ephemeral-storage: "32Mi"
            limits:
              ephemeral-storage: "64Mi"
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /tmp
              name: socket-volume
      volumes:
        - name: socket-volume
          emptyDir: {}
