ingestors/kubernetes/metlo-sidecar.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-app 
  labels:
    app: test-app 
spec:
  containers:
  - name: test-app 
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=Hello World! This is a Metlo Kubernetes with kind App"
  # Metlo Sidecar
  - name: metlo-sidecar
    image: metlo/agent
    resources:
      requests:
        ephemeral-storage: "32Mi"
      limits:
        ephemeral-storage: "64Mi"
    securityContext:
      privileged: true
    volumeMounts:
      - mountPath: /tmp
        name: socket-volume
  volumes:
    - name: socket-volume
      emptyDir: {}
