ingestors/kubernetes/metlo.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: metlo-app
spec:
  selector:
    matchLabels:
      name: metlo-app
  template:
    metadata:
      labels:
        name: metlo-app
    spec:
      hostNetwork: true
      tolerations:
        # this toleration is to have the daemonset runnable on master nodes
        # remove it if your masters can't run pods
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
        - name: suricata-daemon
          image: metlo/suricata-daemon
          imagePullPolicy: Never
          securityContext:
            privileged: true
      nodeSelector:
        app: metlo-app
